# scramjet

./: .gitignore  README.md  RESEARCH_REPORT.md  busemann.py  diagnostics.py  fvm.py  gasdynamics.py  mesh.py  optimization.py  physics.py  pyproject.toml  requirements.txt  response_metrics.py  rom.py  solver.py  tests.py
.github/workflows/: tests.yml
configs/: ncsu_m37.json  ncsu_m40.json  tusq_m585.json
configs/geometry/: config_a_source_reconstructed_v1.json
experiments/: build_steady_q_rom.py  build_unsteady_response_surrogate.py  export_high_fidelity_scaffold.py  gmsh_openfoam_export.py  presets.py  rank_candidate_cases.py  reconstruct_config_a_geometry.py  run_forced_shock_benchmark.py  run_hysteresis_sweep.py  run_parametric_unsteady_doe.py  run_static_wall_sweep.py  run_unsteady_area_breathing.py
figures/: make_geometry_figure.py
verification/: verify_all.py  verify_results.json
